--- a/项目需求说明书.md
+++ b/项目需求说明书.md
@@ -36,7 +36,7 @@
 
 .     员工表：存储新员工录入信息。
 
-.考勤表：记录员工每日考勤情况。
+.     考勤表：记录员工每日考勤情况。
 
 .     年假表：记录和统计员工年假情况。
 
@@ -105,3 +105,13 @@ o  食堂工资统计结果
 .     数据库：关系型数据库（MySQL/PostgreSQL）
 
 .     部署：云服务器，支持容器化（Docker/Kubernetes优先）
+六、用户权限管理
+
+1. admin(系统管理员)：所有权限
+2. hr_admin（hr）：员工信息管理
+3. user
+   1. 生产部门管理：可以管理自己部门
+   2. 生产部门员工：
+   3. 销售部门管理：
+   4. 销售部门员工：
+   5. 普通员工：个人信息
